--- a/PierresTreats/wwwroot/css/styles.css
+++ b/PierresTreats/wwwroot/css/styles.css
@@ -1,3 +1,11 @@
 body {
   text-align: center;
 }
+
+#navbar {
+  background-color: #333;
+  overflow: hidden;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
