--- a/PierresTreats/Views/Account/Index.cshtml
+++ b/PierresTreats/Views/Account/Index.cshtml
@@ -4,7 +4,7 @@
 
 @using System.Security.Claims
 
-<h2>Authentication with Identity</h2>
+<h2>Login or Create an Account to Create, Edit, or Delete Treats and Flavors!</h2>
 <hr />
 
 @if (User.Identity.IsAuthenticated)
