WIP: still working on redirect links in the Home Index

--- a/PierresTreats/Views/Treats/Index.cshtml
+++ b/PierresTreats/Views/Treats/Index.cshtml
@@ -2,8 +2,8 @@
   Layout = "_Layout";
 }
 
-@using PierresTreat.Models;
-@model IEnumerable<PierresTreat.Models.Treat>
+@using PierresTreats.Models;
+@model IEnumerable<PierresTreats.Models.Treat>
 
 <h1>Treats for @User.Identity.Name</h1>
 
