--- a/PierresTreats/Views/Shared/_Layout.cshtml
+++ b/PierresTreats/Views/Shared/_Layout.cshtml
@@ -4,15 +4,14 @@
 <head>
   <meta charset="utf-8">
   <title>Pierre's Sweet and Savory Treats!</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css", integrity="undefined", crossorigin="anonymous">
   <link rel="stylesheet" href="~/css/styles.css">
 </head>
 
-@await Html.PartialAsync("Navbar")
 <body>
   <div class="container-fluid">
-  @RenderBody()
+    @RenderBody()
+    @await Html.PartialAsync("Navbar")
   </div>
 </body>
 
