--- a/PierresTreats/Views/Shared/Navbar.cshtml
+++ b/PierresTreats/Views/Shared/Navbar.cshtml
@@ -6,13 +6,13 @@
   </div>
   @if (User.Identity.IsAuthenticated)
   {
-    <div class="col-4">
+    <div class="col-4 userNav">
       @User.Identity.Name
     </div>
     <div class="col-4">
     @using (Html.BeginForm("LogOff", "Account"))
     {
-      <input type="submit" class="btn btn-default" value="Log out" />
+      <input type="submit" class="btn btn-default" style="color: aliceblue" value="Log out" />
     }
     </div>
   }
